--- a/lively_frontend/src/App/components/Login/login.css
+++ b/lively_frontend/src/App/components/Login/login.css
@@ -1,4 +1,18 @@
-body {
+body{
+  height: 100vh;
+  width: 100vw;
+}
+
+.login-layout{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+
+/* body {
   height: 100%;
   background-color: white;
 }
@@ -72,4 +86,4 @@ body {
   border: none;
   border-radius: 10px;
   margin-top: 16px;
-}
+} */
