--- a/lively_frontend/src/components/LoginPage/login.css
+++ b/lively_frontend/src/components/LoginPage/login.css
@@ -1,89 +1,49 @@
-body{
+.root {
   height: 100vh;
   width: 100vw;
 }
 
 .login-layout{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 4rem;
   height: 100vh;
-  width: 100vw;
 }
 
-
-/* body {
-  height: 100%;
-  background-color: white;
-}
-
-.loginLayout {
+.login-container {
+  width: 320px;
   display: flex;
-  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  column-gap: 2rem;
+  padding: 2rem;
+  border: solid;
+  border-radius: 1rem;
+  box-shadow: 5px 5px 5px #28b498;
 }
 
-.loginLeft {
-  width: 60%;
-  background-color: white;
-  height: 100%;
+.login-fields > form {
+  display: flex;
+  flex-direction: column;
+  column-gap: 1rem;
 }
 
-.loginRight {
-  background-color: #28b498;
-  width: 40%;
-
-  height: 100%;
+.login-form > input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  width: 240px;
 }
 
-.loginLeftContent {
-  margin: 0 auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-}
-
-.loginRightContent {
-  margin: 0 auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  color: white;
-}
-
-.signUpBtn {
-  width: 50%;
-  height: 32px;
-  border-radius: 10px;
-  border: none;
-}
-
-.loginBtn {
-  width: 30%;
-  height: 32px;
-  border-radius: 10px;
-  border: none;
+.login-btn , .signup-btn{
+  padding: 0.5rem;
+  border-radius: 0.5rem;
   background-color: #28b498;
   color: white;
-  margin-top: 24px;
 }
 
-.unameField {
-  width: 60%;
-  height: 32px;
-  padding-left: 10px;
-  background-color: #eef5f3;
-  border: none;
-  border-radius: 10px;
+.signup-btn{
+  width: 320px;
 }
 
-.passwordField {
-  width: 60%;
-  height: 32px;
-  padding-left: 10px;
-  background-color: #eef5f3;
-  border: none;
-  border-radius: 10px;
-  margin-top: 16px;
-} */
