--- a/lively_frontend/src/components/LoginPage/login.css
+++ b/lively_frontend/src/components/LoginPage/login.css
@@ -3,7 +3,8 @@
   width: 100vw;
 }
 
-.login-layout{
+.login-layout,
+.registration-layout {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,7 +13,8 @@
   height: 100vh;
 }
 
-.login-container {
+.login-container,
+.registration__form-container {
   width: 320px;
   display: flex;
   flex-direction: column;
@@ -24,26 +26,29 @@
   box-shadow: 5px 5px 5px #28b498;
 }
 
-.login-fields > form {
+.login-fields > form,
+.registration-form {
   display: flex;
   flex-direction: column;
-  column-gap: 1rem;
+  row-gap: 1rem;
 }
 
-.login-form > input {
+.login-form > input,
+.registration-form > input {
   padding: 0.5rem;
   border-radius: 0.5rem;
   width: 240px;
 }
 
-.login-btn , .signup-btn{
+.login-btn,
+.signup-btn,
+.register-btn {
   padding: 0.5rem;
   border-radius: 0.5rem;
   background-color: #28b498;
   color: white;
 }
 
-.signup-btn{
+.signup-btn {
   width: 320px;
 }
-
