--- a/lively_frontend/src/components/TitleBar/titlebar.css
+++ b/lively_frontend/src/components/TitleBar/titlebar.css
@@ -1,3 +1,24 @@
 .title_container{
-    background-color: #1c302b;
+    display: flex;
+    background-color: hsl(165, 26%, 15%);
+    height: 3rem;
+    color: wheat;
+}
+
+
+.title_container__left{
+    flex-grow: 1;
+    column-gap: 10px;
+}
+
+.title_container__center{
+    flex-grow: 2;
+}
+
+.title_container__right{
+    flex-grow: 1;
+}
+
+.titlebar_item {
+    cursor: pointer;
 }
