--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -1,22 +1,24 @@
 .home_container{
   display: flex;
-  flex-direction: column;
+  padding: 0.5rem;
+  column-gap: 0.5rem;
 }
 
-.home_container-top{
+.home_container-left{
   display: flex;
+  flex-direction: column;
 }
 
 
 .home_profile {
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 40%;
   text-align: center;
 }
 
 .home_container-top-right{
   display: flex;
+  column-gap: 10px;
 }
 
 
@@ -24,14 +26,16 @@
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
   position: relative;
   background-color: white;
-  width: 60%;
+  width: 70%;
+  border-radius: 0.5rem;
 }
 
 .quote-layout {
   text-align: center;
   padding: 5px;
-  width: 40%;
+  width: 30%;
   background-color: white;
+  border-radius: 0.5rem;
 }
 
 .quote-text {
@@ -209,13 +213,10 @@ body {
 }
 
 .AddFriendLayout {
-  width: 30%;
   height: fit-content;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  margin-top: 16px;
-  border-radius: 10px;
   text-align: center;
 }
 
