--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -106,16 +106,96 @@
 }
 
 .posts-container {
-  padding: 20px;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   background-color: white;
 }
 
+.post-item{
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
 
+.post-image{
+  width: 100%;
+  height: auto;
 
+}
 
+.post-features-container{
+  display: flex;
+  column-gap: 1rem;
 
+}
+
+.comments-container, .options-container{
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+  padding: 0.5rem;
+  border: 2px solid black;
+  border-radius: 1rem;
+}
+
+.comments-list{
+  border: 1px solid black;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2px;
+}
+
+.add-comment-layout{
+  border: 1px solid black;
+  background-color: #f0f5f4;
+  border-radius: 1rem;
+  width: 100%;
+  display: flex;
+}
+
+.add-comment__input{
+  border: none;
+  background-color: #f0f5f4;
+  flex-grow: 1;
+  border-radius: 1rem 0 0 1rem;
+}
+
+.post-comment__btn{
+  width: 4rem;
+  border-radius: 0 1rem 1rem 0;
+}
+
+.comment-item-container{
+  display: flex;
+  column-gap: 0.5rem;
+}
+
+.comment-item-details{
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-item__img-container{
+  display: flex;
+  align-items: center;
+}
+
+.comment-item__img{
+  border-radius: 50%;
+  background-color: #28b498;
+}
+
+.comment-item__author{
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.comment-item__content{
+  font-size: medium;
+}
 /* Old */
 body {
   background-color: white;
