--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -126,9 +126,28 @@
 
 .post-features-container{
   display: flex;
-  column-gap: 1rem;
+  justify-content: space-between;
 
 }
+
+.post-header{
+  display: flex;
+  column-gap: 1rem;
+}
+.post-header-img{
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: #28b498;
+}
+
+.post-header-details{
+  display: flex;
+  flex-direction: column;
+}
+
+
+
 
 .comments-container, .options-container{
   display: flex;
