--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -1,20 +1,19 @@
-.home_container{
+.home_container {
   display: flex;
   padding: 0.5rem;
   column-gap: 0.5rem;
 }
 
-.home_container  button {
+.home_container button {
   background-color: var(--home-buttons-color);
   color: wheat;
-  font-weight:normal
+  font-weight: normal;
 }
 
-.home_container-left{
+.home_container-left {
   display: flex;
   flex-direction: column;
 }
-
 
 .home_profile {
   background-color: white;
@@ -23,18 +22,16 @@
   border-radius: 1rem 1rem 0 0;
 }
 
-
-.home_container-right{
+.home_container-right {
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
 }
 
-.home_container-right-top{
+.home_container-right-top {
   display: flex;
   column-gap: 10px;
 }
-
 
 .update-status__container {
   display: flex;
@@ -64,8 +61,7 @@
   font-weight: bold;
 }
 
-
-.add-post-container{
+.add-post-container {
   display: flex;
   background-color: white;
   flex-direction: column;
@@ -76,21 +72,19 @@
   border-radius: 1rem;
 }
 
-.add-post__content{
+.add-post__content {
   display: flex;
   height: 70%;
   column-gap: 0.5rem;
 }
 
-.add-post__image{
+.add-post__image {
   width: 30%;
 }
 
-.add-post__text{
+.add-post__text {
   width: 70%;
-
 }
-
 
 .add-post__text-input {
   width: 100%;
@@ -113,7 +107,7 @@
 
 .addPostLayout {
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
-  
+
   background-color: white;
   width: 70%;
   border-radius: 0.5rem;
@@ -127,9 +121,7 @@
   border-radius: 0.5rem;
 }
 
-
-
-.home_container-right-bottom{
+.home_container-right-bottom {
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
@@ -158,42 +150,40 @@
   background-color: white;
 }
 
-.post-item{
+.post-item {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
 }
 
-.post-image{
+.post-image {
   width: 100%;
   height: auto;
-
 }
 
-.post-features-container{
+.post-features-container {
   display: flex;
   justify-content: space-between;
-
 }
 
-.post-header{
+.post-header {
   display: flex;
   column-gap: 1rem;
 }
-.post-header-img{
+.post-header-img {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
   background-color: #28b498;
 }
 
-.post-header-details{
+.post-header-details {
   display: flex;
   flex-direction: column;
 }
 
-.post-dialog-layout{
-  position:fixed ;
+.post-dialog-layout {
+  position: fixed;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -202,7 +192,7 @@
   background: rgba(0, 0, 0, 0.5);
 }
 
-.post-options-dialog{
+.post-options-dialog {
   position: relative;
   background-color: white;
   width: 40vw;
@@ -210,27 +200,31 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  row-gap: 1rem;
   border-radius: 1rem;
   padding: 1rem;
   z-index: 1000;
-
 }
 
-.dialog-input__field, 
-.dialog-input__field>input {
+.dialog-input__field,
+.dialog-input__field > input {
   width: 100%;
 }
 
-.dialog-input__field > input{
+.dialog-input__field > input {
   height: 4rem;
   border-radius: 1rem;
 }
 
-.dialog-image__layout{
+.dialog-image__layout {
   width: 100%;
 }
 
-.dialog-btn__layout{
+.dialog-image__layout > img {
+  width: 100%;
+}
+
+.dialog-btn__layout {
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -242,17 +236,17 @@
   padding: 0.25rem;
 }
 
-.comments-container, .options-container{
+.comments-container,
+.options-container {
   display: flex;
   align-items: center;
   column-gap: 0.5rem;
-  padding: 0.5rem 1rem ;
+  padding: 0.5rem 1rem;
   border: 2px solid black;
   border-radius: 1rem;
-  ;
 }
 
-.comments-list{
+.comments-list {
   border: 1px solid black;
   padding: 0.5rem;
   display: flex;
@@ -260,7 +254,7 @@
   row-gap: 2px;
 }
 
-.add-comment-layout{
+.add-comment-layout {
   border: 1px solid black;
   background-color: #f0f5f4;
   border-radius: 1rem;
@@ -268,45 +262,45 @@
   display: flex;
 }
 
-.add-comment__input{
+.add-comment__input {
   border: none;
   background-color: #f0f5f4;
   flex-grow: 1;
   border-radius: 1rem 0 0 1rem;
 }
 
-.post-comment__btn{
+.post-comment__btn {
   width: 4rem;
   border-radius: 0 1rem 1rem 0;
 }
 
-.comment-item-container{
+.comment-item-container {
   display: flex;
   column-gap: 0.5rem;
 }
 
-.comment-item-details{
+.comment-item-details {
   display: flex;
   flex-direction: column;
 }
 
-.comment-item__img-container{
+.comment-item__img-container {
   display: flex;
   align-items: center;
 }
 
-.comment-item__img{
+.comment-item__img {
   border-radius: 50%;
   background-color: #28b498;
 }
 
-.comment-item__author{
+.comment-item__author {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 0;
 }
 
-.comment-item__content{
+.comment-item__content {
   font-size: medium;
 }
 /* Old */
@@ -320,8 +314,6 @@ body {
   height: 100vh;
   width: 100%;
 }
-
-
 
 .homeImg {
   height: 150px;
@@ -346,9 +338,6 @@ body {
   display: flex;
   height: 60%;
 }
-
-
-
 
 .btnContainer {
   display: flex;
@@ -375,8 +364,6 @@ body {
   width: 40%;
   margin-top: 16px;
 }
-
-
 
 .imagePostContainer {
   display: flex;
@@ -441,10 +428,6 @@ body {
   color: white;
   border-radius: 10px;
 }
-
-
-
-
 
 .AddFriendLayout {
   height: fit-content;
@@ -523,8 +506,6 @@ body {
   margin-top: 32px;
   padding: 32px;
 }
-
-
 
 .Post {
   width: 40%;
@@ -655,13 +636,9 @@ body {
   font-weight: bold;
 }
 
-
-
 .statusUsername {
   font-weight: bold;
 }
-
-
 
 dialog {
   border: none;
