--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -134,9 +134,9 @@
   height: 2rem;
 }
 
-.searchInputField {
+.search-field {
   width: 100%;
-  height: 32px;
+  height: 3rem;
   background-color: white;
   border: 2px solid black;
   border-radius: 10px;
@@ -144,21 +144,26 @@
 }
 
 .posts-container {
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   background-color: white;
+  row-gap: 1rem;
+  background-color: #f0f5f4;
 }
 
 .post-item {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: white;
 }
 
 .post-image {
   width: 100%;
   height: auto;
+  border-radius: 1rem;
 }
 
 .post-features-container {
@@ -174,7 +179,8 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: #28b498;
+  border: 2px solid black;
+  padding: 0.5rem;
 }
 
 .post-header-details {
