--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -164,6 +164,7 @@
   width: 100%;
   height: auto;
   border-radius: 1rem;
+  object-fit: cover;
 }
 
 .post-features-container {
@@ -273,11 +274,13 @@
   background-color: #f0f5f4;
   flex-grow: 1;
   border-radius: 1rem 0 0 1rem;
+  padding-left: 1rem;
 }
 
 .post-comment__btn {
-  width: 4rem;
+  padding: 0 1rem;
   border-radius: 0 1rem 1rem 0;
+  font-weight: bold;
 }
 
 .comment-item-container {
