--- a/lively_frontend/src/components/ProfilePage/profile.css
+++ b/lively_frontend/src/components/ProfilePage/profile.css
@@ -39,8 +39,8 @@
 }
 
 .profile-img-container > img {
-  width: 100;
-  height: 50%;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   border: 2px solid black;
   object-fit: cover;
