--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -190,7 +190,7 @@
   flex-grow: 1;
 }
 
-.post-header button{
+.post-header button {
   padding: 0.25rem;
   background: none;
   color: black;
@@ -198,7 +198,6 @@
   padding: 0rem 1rem;
   border-radius: 1rem;
   font-weight: bolder;
-
 }
 
 .post-dialog-layout {
@@ -237,10 +236,13 @@
 
 .dialog-image__layout {
   width: 100%;
+  aspect-ratio: 1/1;
 }
 
 .dialog-image__layout > img {
   width: 100%;
+  height: 100%;
+  object-fit: center;
 }
 
 .dialog-btn__layout {
