--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 0.5rem;
   column-gap: 0.5rem;
+  height: 100%;
 }
 
 .home_container button {
@@ -15,10 +16,16 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
   border-radius: 1rem 1rem 0 0;
+  align-items: center;
+  column-gap: 0.5rem;
 }
 
 .home_container-right {
   row-gap: 2rem;
+}
+
+.home_container-left {
+  height: 100vh;
 }
 
 .home_container-right-top {
@@ -322,11 +329,15 @@
   border: 2px solid black;
 }
 
-.home__profile-img {
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
+.home-profile__img-container {
   margin-top: 1rem;
+  width: 150px;
+  background-color: #eef5f3;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+}
+.home__profile-img {
+  border-radius: 50%;
 }
 
 .add-post__image-btn {
