--- a/lively_frontend/src/components/TitleBar/titlebar.css
+++ b/lively_frontend/src/components/TitleBar/titlebar.css
@@ -4,7 +4,9 @@
   height: 3rem;
   color: wheat;
   font-size: large;
-  position: relative;
+  top: 0;
+  position: sticky;
+  z-index: 1000;
 }
 
 .title_container__left {
