--- a/lively_frontend/src/components/HomePage/home.css
+++ b/lively_frontend/src/components/HomePage/home.css
@@ -288,6 +288,8 @@
 .add-friend-layout {
   background-color: white;
   border-top: 1px solid black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 1rem 1rem;
   padding: 0.5rem;
   row-gap: 1rem;
 }
